Human works even better

--- a/src/server/templates/index.html
+++ b/src/server/templates/index.html
@@ -35,6 +35,6 @@
     <input type="text" id="action" name="action" onkeypress="return send_action(event)" />
     <br>
     <label for="env_resp">Simulator Response</label>
-    <input type="text" id="env_resp" name="env_resp" />
+    <textarea id="env_resp" name="env_resp" rows="2" cols="80"> </textarea>
   </body>
 </html>
